--- a/src/components/sidebar/styles/sidebarstyle.module.css
+++ b/src/components/sidebar/styles/sidebarstyle.module.css
@@ -4,8 +4,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  background: #333;
-  color: white;
+  background: #e0b1b1;
+  color: black;
   padding: 20px;
   z-Index: '1000';
 }
@@ -16,7 +16,7 @@
 }
 
 .sidebarItem {
-  color: white;
+  color: black;
   text-decoration: none;
 }
 
