--- a/src/components/footer/styles/footerStyle.module.css
+++ b/src/components/footer/styles/footerStyle.module.css
@@ -13,6 +13,7 @@
       margin: 0 1rem;
       padding-top: 1rem;
       padding-bottom: 1rem;
+      border-top: 1px solid rgb(177, 172, 172);
     }
 
 }
