--- a/src/components/header/styles/headerStyle.module.css
+++ b/src/components/header/styles/headerStyle.module.css
@@ -1,29 +1,54 @@
 .mainContentHeader {
-    margin-left: 240px;
-    padding-top: 2rem;
-    padding-left: 3rem;
-    padding-bottom: 3rem;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    background-color: white;  /*PROBICIONAL*/
+  margin-left: 240px;
+  padding-top: 2rem;
+  padding-left: 3rem;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: white;
+}
+
+.titleText {
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.subTitleText {
+  font-family: 'Merriweather', serif;
+  font-weight: bold;
+}
+
+/* Media query para dispositivos móviles */
+@media (max-width: 788px) {
+  .mainContentHeader {
+    display: flex;
+    justify-content: center;
+    margin-right: 1rem;
+    padding: 10px 20px 10px 20px;
+    margin-left: 130px;
   }
 
-  /* Media query para dispositivos móviles */
-@media (max-width: 768px) {
-    .mainContentHeader {
-      display: flex;
-      justify-content: center;
-      margin-right: 1rem;
-      height: 11vh;
-      padding: 20px;
-      margin-left: 130px;
-    }
+  .subTitleText {
+    padding: 0;
+    margin: 0;
+  }
 
-    .mainContentHeader {
-      display: flex;
-      flex-direction: column;
-      text-transform: uppercase;
-    }
+  .mainContentHeader {
+    display: flex;
+    flex-direction: column;
+  }
 
+}
+
+@media (max-width: 412px) {
+  .wrapperSubTitle {
+    padding-bottom: 1.5rem;
+  }
+}
+
+@media (max-width: 344px) {
+  .wrapperSubTitle {
+    padding-bottom: 1.4rem;
+  }
 }
