--- a/src/app.module.css
+++ b/src/app.module.css
@@ -6,17 +6,17 @@
     overflow: auto;
     border-top: 1px solid rgb(177, 172, 172);
     margin-right: 1rem;
-    
 }
 
   /* Media query para dispositivos móviles */
-  @media (max-width: 768px) {
+  @media (max-width: 788px) {
     .app {
         max-width: 92%;
         margin: 0 1rem;
         padding: 0 1rem;
         display: flex;
         justify-content: start;
+        border-top: none;
         
     }
 
