--- a/src/components/footer/styles/footerStyle.module.css
+++ b/src/components/footer/styles/footerStyle.module.css
@@ -2,15 +2,15 @@
     margin-left: 240px;
     padding-left: 3rem;
     padding-bottom: 3rem;
+    background-color: rgb(124, 102, 102);
   }
   
   /* Media query para dispositivos móviles */
-  @media (max-width: 768px) {
+  @media (max-width: 788px) {
     .mainContentFooter {
       display: flex;
       justify-content: center;
       margin: 0 auto;
-      margin: 0 1rem;
       padding-top: 1rem;
       padding-bottom: 1rem;
       border-top: 1px solid rgb(177, 172, 172);
