--- a/src/components/header/styles/headerStyle.module.css
+++ b/src/components/header/styles/headerStyle.module.css
@@ -24,9 +24,9 @@
   .mainContentHeader {
     display: flex;
     justify-content: center;
-    margin-right: 1rem;
     padding: 10px 20px 10px 20px;
     margin-left: 130px;
+    background-color: #d1bda5;
   }
 
   .subTitleText {
