--- a/src/components/sidebar/styles/sidebarstyle.module.css
+++ b/src/components/sidebar/styles/sidebarstyle.module.css
@@ -4,10 +4,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  background: #5b9fb3;
-  color: black;
+  background-color: #d1bda5;
   padding: 20px;
   z-Index: '1000';
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .sidebarWrapperList {
@@ -15,40 +15,70 @@
   padding: 0;
 }
 
-.sidebarItem {
-  color: black;
-  text-decoration: none;
+.wrapperSidebarItems {
+  display: flex;
+  justify-content: center;
 }
+
+.sidebarItem {
+  color:rgb(107, 67, 7);
+  text-decoration: none;
+  margin-top: 2rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: 'Lora', serif;
+}
+
+/* LOGO */
+.palms_black {
+  width: 180px;
+  border-bottom: 1px solid rgb(29, 13, 13);
+}
+
+/* BURGUER */
+
 
 
 /* Media query para dispositivos móviles */
 @media (max-width: 788px) {
   .sidebarWrapper {
-    height: 10vh;
-    margin-left: 1rem;
+    height: 9.15vh;
     width: 100px;
-    background-color: white;
+    background-color: #d1bda5;
     margin-top: 1px;
   }
 
   .sidebarWrapperList {
-    width: 300px;
+    width: 260px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
     text-transform: uppercase;
     cursor: pointer;
+    background-color: #fce9d7;
+    margin: 0;
+    padding: 1rem 1rem;
   }
 
   .sidebarItem {
-    color: green;
+    color: rgb(107, 67, 7);
   }
+
+  .MuiDialogContent-root {
+    padding: 0 !important;
+  }  
 
 }
 
-@media (max-width: 788px) {
+
+@media (max-width: 413px) {
   .sidebarWrapper {
-    height: 7vh;
+    height: 12.5vh;
+  }
+}
+
+@media (max-width: 380px) {
+  .sidebarWrapper {
+    height: 17.4vh;
   }
 }
