--- a/src/components/footer/styles/footerStyle.module.css
+++ b/src/components/footer/styles/footerStyle.module.css
@@ -1,19 +1,16 @@
 .mainContentFooter {
-    margin-left: 240px;
-    padding-left: 3rem;
-    padding-bottom: 3rem;
-    background-color: rgb(124, 102, 102);
+  display: flex;
+  justify-content: center;
+  margin-left: 240px;
+  padding-bottom: 3rem;
+}
+
+/* Media query para dispositivos móviles */
+@media (max-width: 788px) {
+  .mainContentFooter {
+    margin: 0 auto;
+    padding: 2rem;
+    border-top: 1px solid #00000030;
   }
-  
-  /* Media query para dispositivos móviles */
-  @media (max-width: 788px) {
-    .mainContentFooter {
-      display: flex;
-      justify-content: center;
-      margin: 0 auto;
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-      border-top: 1px solid rgb(177, 172, 172);
-    }
 
 }
