--- a/src/components/header/styles/headerStyle.module.css
+++ b/src/components/header/styles/headerStyle.module.css
@@ -2,10 +2,12 @@
   margin-left: 240px;
   padding-top: 2rem;
   padding-left: 3rem;
-  position: sticky;
+  position: fixed;
+  width: 100%;
   top: 0;
   z-index: 1000;
-  background-color: white;
+  background-color: #f5f5f0;
+  border-bottom: 1px solid black;
 }
 
 .titleText {
@@ -26,7 +28,9 @@
     justify-content: center;
     padding: 10px 20px 10px 20px;
     margin-left: 130px;
-    background-color: #d1bda5;
+    background-color: transparent;
+    position: relative;
+    border: none;
   }
 
   .subTitleText {
