--- a/src/generalPalmeras/styles.css
+++ b/src/generalPalmeras/styles.css
@@ -15,9 +15,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .main-content-layout {
-  padding-left: 2rem;
-  margin-left: 280px;
-  margin-right: 2rem;
+  margin: 180px 2rem 65px 280px;
 }
 
   /* Media query para dispositivos móviles */
@@ -30,6 +28,7 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: center;
     margin: 0;
     overflow-x: hidden; /* Evita scroll horizontal */
+    margin-top: 130px;
   }
 
 }
