finishing palmeras component

--- a/src/components/header/styles/headerStyle.module.css
+++ b/src/components/header/styles/headerStyle.module.css
@@ -49,6 +49,10 @@
   .wrapperSubTitle {
     padding-bottom: 1.5rem;
   }
+
+  .mainContentHeader {
+    margin-left: 110px;
+  }
 }
 
 @media (max-width: 344px) {
