--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,6 +1,7 @@
 
 .app {
     display: flex;
+    justify-content: center;
     flex: 1 1 auto;
     overflow: auto;
     border-top: 1px solid rgb(177, 172, 172);
