--- a/src/generalPalmeras/styles.css
+++ b/src/generalPalmeras/styles.css
@@ -14,6 +14,11 @@ h1, h2, h3, h4, h5, h6 {
   color: #2b2b2b;
 }
 
+.wrapperSubTitle {
+  display: flex;
+  justify-content: center;
+}
+
 .main-content-layout {
   margin: 180px 2rem 65px 280px;
 }
