--- a/src/components/header/styles/headerStyle.module.css
+++ b/src/components/header/styles/headerStyle.module.css
@@ -55,6 +55,12 @@
   }
 }
 
+@media (max-width: 360px) {
+  .mainContentHeader {
+    margin-left: 80px;
+  }
+}
+
 @media (max-width: 344px) {
   .wrapperSubTitle {
     padding-bottom: 1.4rem;
