--- a/src/sections/ubicacion/styles/ubicacion.module.css
+++ b/src/sections/ubicacion/styles/ubicacion.module.css
@@ -20,7 +20,7 @@
     justify-content: center;
     text-decoration: none;
     padding-bottom: 20px;
-    color: black;
+    color: rgb(48, 43, 43);
     text-transform: uppercase;
 }
 
@@ -41,7 +41,7 @@
 
 @media (max-width: 360px) {
     .ubicacionWrapper {
-        margin-left: -1.9rem;
+        margin-left: -1.8rem;
     }
 }
 
