--- a/src/sections/las palmeras/styles/palmeras.module.css
+++ b/src/sections/las palmeras/styles/palmeras.module.css
@@ -1,3 +1,9 @@
+.sectionTitle {
+    display: flex;
+    justify-content: center;
+    padding-top: 2rem;
+}
+
 .containerPalmeras {
     display: flex;
     align-items: flex-start;
