--- a/src/sections/galeria/styles/galeria.module.css
+++ b/src/sections/galeria/styles/galeria.module.css
@@ -1,3 +1,9 @@
+.sectionTitle {
+  display: flex;
+  justify-content: center;
+  padding-top: 2rem;
+}
+
 .galleryContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
