--- a/src/sections/ubicacion/styles/ubicacion.module.css
+++ b/src/sections/ubicacion/styles/ubicacion.module.css
@@ -1,3 +1,9 @@
+.sectionTitle {
+    display: flex;
+    justify-content: center;
+    padding-top: 2rem;
+}
+
 .mapContainer {
     display: flex;
     justify-content: center;
