--- a/src/sections/servicios/styles/servicios.module.css
+++ b/src/sections/servicios/styles/servicios.module.css
@@ -11,7 +11,7 @@
     font-size: 2rem;
     text-align: center;
     font-weight: bold;
-    color: rgb(131, 91, 32);
+    color: #b8860b;
     margin-bottom: 1rem;
   }
   
