--- a/src/sections/promociones/styles/promociones.module.css
+++ b/src/sections/promociones/styles/promociones.module.css
@@ -1,6 +1,5 @@
 .wrapperSectionTitle {
     text-align: center;
-    margin-bottom: 2rem;
   }
   
   .sectionTitle {
@@ -9,6 +8,7 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+    padding-top: 2rem;
   }
   
   .wrapperPromociones {
@@ -29,7 +29,6 @@
   }
   
   .promocionCard:hover {
-    transform: scale(1.03);
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.15);
     border: 1px solid #b8860b;
   }
