--- a/src/sections/servicios/styles/servicios.module.css
+++ b/src/sections/servicios/styles/servicios.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2rem 0;
+    margin: .5rem 0;
     gap: 2rem;
   }
   
