--- a/src/sections/preguntas/styles/preguntas.module.css
+++ b/src/sections/preguntas/styles/preguntas.module.css
@@ -1,58 +1,78 @@
 .wrapperFaq {
-    padding: 2rem;
-    background-color: #f9f9f9;
-  }
-  
-  .faqHeader {
-    text-align: center;
-    margin-bottom: 2rem;
-  }
-  
-  .faqTitle {
-    font-size: 2rem;
-    color: #b8860b;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    margin-bottom: 0.5rem;
-  }
-  
-  .faqDescription {
-    font-size: 1.2rem;
-    color: #555;
-  }
-  
+  padding: 2rem;
+  background-color: #f9f9f9;
+}
+
+.faqHeader {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.faqTitle {
+  font-size: 2rem;
+  color: #b8860b;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 0.5rem;
+}
+
+.faqDescription {
+  font-size: 1.2rem;
+  color: #555;
+}
+
+.accordionWrapper {
+  max-width: 800px;
+  min-width: 800px;
+  margin: 0 auto;
+}
+
+@media (max-width: 788px) {
   .accordionWrapper {
-    max-width: 800px;
-    margin: 0 auto;
+    min-width: 0px;
   }
-  
-  .accordion {
-    background-color: #ffffff;
-    border: 1px solid #e0e0e0;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    margin-bottom: 1rem;
-    transition: box-shadow 0.3s ease;
-  }
-  
-  .accordion:hover {
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
-  }
-  
-  .accordionSummary {
-    background-color: #f4f4f4;
-    padding: 0.5rem 1rem;
-  }
-  
-  .accordionQuestion {
-    font-size: 1.1rem;
-    font-weight: bold;
-    color: #8b4513;
-  }
-  
-  .accordionAnswer {
-    font-size: 1rem;
-    color: #555555;
-    line-height: 1.5;
-    padding: 0.5rem 1rem;
-  }
-  
+}
+
+.accordion {
+  background-color: #ffffff;
+  border: 1px solid #e0e0e0;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1rem;
+  transition: box-shadow 0.3s ease;
+  overflow: hidden;
+}
+
+.accordion.active {
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.accordionSummary {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f4f4f4;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+
+.accordionQuestion {
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #8b4513;
+}
+
+.accordionIcon {
+  font-size: 1.5rem;
+  color: #8b4513;
+}
+
+.accordionDetails {
+  background-color: #ffffff;
+  padding: 0.5rem 1rem;
+}
+
+.accordionAnswer {
+  font-size: 1rem;
+  color: #555555;
+  line-height: 1.5;
+}
