--- a/src/sections/servicios/styles/servicios.module.css
+++ b/src/sections/servicios/styles/servicios.module.css
@@ -36,8 +36,13 @@
     padding: 1.5rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease, border 0.3s ease;
   }
   
+  .servicioItem:hover {
+    background-color: #C19A6B20;
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.35);
+  } 
   .servicioItem h4 {
     font-size: 1.25rem;
     color: #C19A6B;
