--- a/src/generalPalmeras/styles.css
+++ b/src/generalPalmeras/styles.css
@@ -27,8 +27,22 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     justify-content: center;
     margin: 0;
-    overflow-x: hidden; /* Evita scroll horizontal */
+    overflow-x: hidden;
     margin-top: 110px;
   }
 
+}
+
+/* FADE - IN */
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeIn 0.5s ease-out forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
